# mndot-bid-dash

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/: style.css
src/components/: accordion.py  bid_analytics.py  bid_box_plot.py  bid_mean_plot.py  bid_price_v_quanity.py  bid_scatter_plot.py  bid_summary_table.py  classes.py  ids.py  item_search.py  item_table.py  layout.py  navbar.py  selected_item.py  spec_year_dropdown.py  spec_year_selector.py
src/data/: __init__.py  bid_data.py  bid_loader.py  contract_data.py  contract_loader.py  item_data.py  item_loader.py
