[tool.poetry]
name = "mndot-bid-dash"
version = "0.1.0"
description = ""
authors = ["depowered <dpwr16@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.7.0"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
